:books: docs: Atualizaçao do swagger
